// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiService #createIdentity should call callHttp 1`] = `
Array [
  Array [
    "https://api.getmati.com/oauth",
    Object {
      "body": "grant_type=client_credentials",
      "headers": Object {
        "authorization": "Basic Y2xpZW50SWQ6Y2xpZW50U2VjcmV0",
        "content-type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://api.getmati.com/v2/identities",
    Object {
      "body": Object {
        "metadata": Object {
          "email": "john@gmail.com",
        },
      },
      "headers": Object {
        "authorization": "Bearer access_token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`apiService #fetchResource with 401 error  should call callHttp 1`] = `
Array [
  Array [
    "https://api.getmati.com/oauth",
    Object {
      "body": "grant_type=client_credentials",
      "headers": Object {
        "authorization": "Basic Y2xpZW50SWQ6Y2xpZW50U2VjcmV0",
        "content-type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
    },
  ],
  Array [
    "http://resourceUrl",
    Object {
      "headers": Object {
        "authorization": "Bearer access_token",
      },
    },
  ],
]
`;

exports[`apiService #fetchResource with 401 error  should resolve with resource 1`] = `"Oooups!"`;

exports[`apiService #fetchResource with right auth should call callHttp 1`] = `
Array [
  Array [
    "https://api.getmati.com/oauth",
    Object {
      "body": "grant_type=client_credentials",
      "headers": Object {
        "authorization": "Basic Y2xpZW50SWQ6Y2xpZW50U2VjcmV0",
        "content-type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
    },
  ],
  Array [
    "http://resourceUrl",
    Object {
      "headers": Object {
        "authorization": "Bearer access_token",
      },
    },
  ],
]
`;

exports[`apiService #sendInput should call callHttp 1`] = `
Array [
  Array [
    "https://api.getmati.com/oauth",
    Object {
      "body": "grant_type=client_credentials",
      "headers": Object {
        "authorization": "Basic Y2xpZW50SWQ6Y2xpZW50U2VjcmV0",
        "content-type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://api.getmati.com/v2/identities/identityId/send-input",
    Object {
      "body": Object {},
      "headers": Object {
        "authorization": "Bearer access_token",
      },
      "method": "POST",
    },
  ],
]
`;
